Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -162,7 +162,6 @@ nav:after {
 
 #mobileSearch button,
 #desktopSearch button {
-    display: block;
     align-self: stretch;
 }
 
